--- a/resources/css/map.css
+++ b/resources/css/map.css
@@ -5,11 +5,12 @@
     float:left;
     margin:0 0.2em 3em 0;
     padding:0 1em 1em 1em;
+    max-width:95%;
+    font-size:1.05em;
     border-radius:0.5em;
     background:repeating-linear-gradient(0.38turn, black, black 2px, #17202a 2px, #17202a 4px);
     box-shadow: 5px 5px 10px black;
     overflow:auto;
-    max-width:95%;
     /* Pour que la largeur de la ville en surimpression soit calculée 
        par rapport celle la carte et pas à celle de la page */
     position:relative;
